--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "IronDB",
+  "name": "iron-db",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development"
