--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iron-db",
   "private": false,
   "version": "0.1.0",
+  "main": "src/index.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development"
