--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "format": "prettier --write \"**/*.+(js)\""
   },
   "dependencies": {
     "idb-keyval": "^3.0.5",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "eslint": "^5.8.0",
+    "prettier": "^1.14.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
     "webpack-cli": "^3.1.0"
