--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development",
     "lint": "eslint src",
-    "format": "prettier --write \"**/*.+(js)\""
+    "format": "prettier --write \"src/*.+(js)\" && eslint --fix src"
   },
   "dependencies": {
     "idb-keyval": "^3.0.5",
@@ -17,6 +17,13 @@
   },
   "devDependencies": {
     "eslint": "^5.8.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.14.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
