Enforce a space before function definition parameters.

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,11 @@
     "extends": [
       "standard", "eslint-config-prettier"
     ],
+    "rules": {
+        "space-before-function-paren": [2, "always"]
+    },
     "env": {
         "browser": true,
         "es6": true
     }
-  }
+}
