--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development",
-    "lint": "eslint src",
-    "format": "prettier --write \"src/*.+(js)\" && eslint --fix src"
+    "lint": "eslint src/",
+    "format": "prettier --write \"src/*.+(js)\" && eslint --fix src/"
   },
   "dependencies": {
     "idb-keyval": "^3.0.5",
