--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development",
     "lint": "eslint src/",
-    "format": "prettier --write \"src/*.+(js)\" && eslint --fix src/"
+    "format": "prettier --write \"src/*.+(js)\" && eslint --fix src/",
+    "serve": "webpack-dev-server --watch --mode 'development' --open"
   },
   "dependencies": {
     "idb-keyval": "^3.0.5",
@@ -27,6 +28,7 @@
     "prettier": "^1.14.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.10"
   }
 }
