Serve the minified version of ImmortalDB (immortal-db.min.js) on unpkg.com, not the unminified version.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "1.0.1",
   "main": "src/index.js",
+  "unpkg": "dist/immortal-db.min.js",
   "types": "immortal-db.d.ts",
   "scripts": {
     "build": "webpack --mode production",
