--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "private": false,
   "version": "1.0.1",
   "main": "src/index.js",
-  "unpkg": "dist/immortal-db.min.js",
   "types": "immortal-db.d.ts",
+  "unpkg": "dist/immortal-db.min.js",
+  "homepage": "https://github.com/gruns/ImmortalDB",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack -w --mode development",
