--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "webpack -w --mode development",
     "lint": "eslint src/",
     "format": "prettier --write \"src/*.+(js)\" && eslint --fix src/",
-    "serve": "webpack-dev-server --watch --mode 'development' --open"
+    "serve": "webpack-dev-server --watch --mode development --open"
   },
   "dependencies": {
     "idb-keyval": "^3.0.5",
