--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.14.3",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.15.1",
