Add HtmlWebpackPlugin's generated dist/index.html to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+##################################################
+# General
+##################################################
 *~
 .#*
 \#*
@@ -10,3 +13,9 @@ build/
 *.egg-info
 node_modules/
 .vscode
+
+##################################################
+# ImmortalDB
+##################################################
+# HtmlWebpackPlugin's generated testing/test.html.
+dist/index.html
