Update package.json to import transpiled version
I got an error when using Jest because it was using the ES6 Version of the package and it failed to parse "import" token.
I think it should use transpiled version by default.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "immortal-db",
   "private": false,
   "version": "1.0.2",
-  "main": "src/index.js",
+  "main": "dist/immortal-db.js",
   "types": "immortal-db.d.ts",
   "unpkg": "dist/immortal-db.min.js",
   "homepage": "https://github.com/gruns/ImmortalDB",
