set libraryTarget to umd, add module to package.json, remove unused webpack require from config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "immortal-db",
   "private": false,
   "version": "1.0.2",
-  "main": "src/index.js",
+  "main": "dist/immortal-db.js",
+  "module": "src/index.js",
   "types": "immortal-db.d.ts",
   "unpkg": "dist/immortal-db.min.js",
   "homepage": "https://github.com/gruns/ImmortalDB",
