set libraryTarget to umd, add module to package.json, remove unused webpack require from config

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": false,
   "version": "1.0.2",
   "main": "dist/immortal-db.js",
+  "module": "src/index.js",
   "types": "immortal-db.d.ts",
   "unpkg": "dist/immortal-db.min.js",
   "homepage": "https://github.com/gruns/ImmortalDB",
