--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^3.6.0",
     "eslint-config-standard": "^12.0.0",
