chore: add Jest minimal config

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     },
     "extends": "airbnb-base",
     "rules": {
+        "import/prefer-default-export": 0,
         "indent": ["error", 4],
         "no-empty": ["error", { "allowEmptyCatch": true }]
     },
