--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^8.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "html-webpack-plugin": "^4.4.1",
+    "jest": "^27.4.7",
+    "jest-esm-transformer": "^1.0.0",
     "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
